# getwinbg

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/getwinbg/: __init__.py  __main__.py  api.py  cli.py
src/getwinbg/system/: background.py
